# tuxinjector

./: .gitignore  404.html  Cargo.toml  README.md  flake.nix  mkdocs.yml  package.nix
api/: index.html
api/key_names/: index.html
api/tx_bind/: index.html
api/tx_exec/: index.html
api/tx_log/: index.html
api/tx_press_key/: index.html
api/tx_sleep/: index.html
api/tx_state/: index.html
assets/: default.lua
crates/tuxinjector/: Cargo.toml
crates/tuxinjector-capture/: Cargo.toml
crates/tuxinjector-capture/src/: lib.rs  pipewire_capture.rs  portal.rs
crates/tuxinjector-config/: Cargo.toml
crates/tuxinjector-config/src/: defaults.rs  expr.rs  hot_reload.rs  key_names.rs  lib.rs  snapshot.rs  types.rs
crates/tuxinjector-core/: Cargo.toml
crates/tuxinjector-core/src/: color.rs  geometry.rs  lib.rs  mailbox.rs  rcu.rs  spsc.rs  transition.rs
crates/tuxinjector-gl-interop/: Cargo.toml
crates/tuxinjector-gl-interop/src/: compositor.rs  gl_bindings.rs  gl_renderer.rs  gl_state.rs  lib.rs
crates/tuxinjector-gui/: Cargo.toml
crates/tuxinjector-gui/src/: app.rs  lib.rs  running_apps.rs  toast.rs  widgets.rs
crates/tuxinjector-gui/src/tabs/: appearance.rs  apps.rs  cursors.rs  debug.rs  eyezoom.rs  general.rs  hotkeys.rs  images.rs  key_rebinds.rs  mirrors.rs  mod.rs  modes.rs  mouse.rs  plugins.rs  window_overlays.rs
crates/tuxinjector-input/: Cargo.toml
crates/tuxinjector-input/src/: callbacks.rs  glfw_types.rs  hotkey.rs  lib.rs  rebind.rs  sensitivity.rs
crates/tuxinjector-lua/: Cargo.toml
crates/tuxinjector-lua/src/: actions.rs  api.rs  key_parse.rs  lib.rs  loader.rs  runtime.rs
crates/tuxinjector-plugin-api/: Cargo.toml
crates/tuxinjector-plugin-api/src/: lib.rs
crates/tuxinjector-render/: Cargo.toml
crates/tuxinjector-render/src/: image_loader.rs  lib.rs  pipeline.rs  render_target.rs  renderer.rs  texture.rs
crates/tuxinjector-render/src/shaders/: border.frag  border.vert  filter.frag  gradient.frag  gradient.vert  image.frag  passthrough.frag  solid.frag  solid.vert
crates/tuxinjector/src/: app_capture.rs  config_init.rs  dlsym_hook.rs  gl_resolve.rs  glfw_hook.rs  gui_renderer.rs  input_handler.rs  lib.rs  lua_writer.rs  mirror_capture.rs  mode_system.rs  overlay.rs  overlay_gen.rs  perf_stats.rs  plugin_loader.rs  plugin_registry.rs  render_thread.rs  state.rs  state_watcher.rs  swap_hook.rs  text_rasterizer.rs  viewport_hook.rs  virtual_fb.rs  window_state.rs
design-decisions/: index.html
docs/tuxinjector/src/: design-decisions.md  index.md  injection.md  input.md  installation.md  rendering.md  thanks.md  usage.md
docs/tuxinjector/src/api/: README.md  key_names.md  tx.md  tx_active_res.md  tx_bind.md  tx_current_time.md  tx_exec.md  tx_get_key.md  tx_get_mode.md  tx_listen.md  tx_log.md  tx_press_key.md  tx_set_sensitivity.md  tx_sleep.md  tx_state.md  tx_switch_mode.md  tx_toggle_app_visibility.md  tx_toggle_gui.md  tx_toggle_mode.md
injection/: index.html
input/: index.html
search/: search_index.json
site/: index.html
site/api/tx/: index.html
site/api/tx_active_res/: index.html
site/api/tx_current_time/: index.html
site/api/tx_get_key/: index.html
site/api/tx_get_mode/: index.html
site/api/tx_listen/: index.html
site/api/tx_set_sensitivity/: index.html
site/api/tx_switch_mode/: index.html
site/api/tx_toggle_app_visibility/: index.html
site/api/tx_toggle_gui/: index.html
site/api/tx_toggle_mode/: index.html
site/rendering/: index.html
site/thanks/: index.html
usage/: index.html
